fixed scroll on small devices

--- a/src/components/instruction-viewer/style.css
+++ b/src/components/instruction-viewer/style.css
@@ -28,3 +28,9 @@ div.instruction-viewer-container::-webkit-scrollbar-thumb {
 .instruction-code-block {
   margin-bottom: 1rem;
 }
+
+@media (max-width: 991px) {
+  .instruction-viewer-container {
+    height: unset;
+  }
+}
